Adjusted repo health files
Added the new app name, Harden System Security.

--- a/.github/ISSUE_TEMPLATE/Bug_Report.yaml
+++ b/.github/ISSUE_TEMPLATE/Bug_Report.yaml
@@ -15,6 +15,7 @@ body:
       label: Product
       description: Which Product Does This Bug Belong To?
       options:
+        - Harden System Security App
         - Harden Windows Security Module
         - AppControl Manager
     validations:
