--- a/AppControl Manager/eXclude/DISMService/DISMService.csproj
+++ b/AppControl Manager/eXclude/DISMService/DISMService.csproj
@@ -23,4 +23,9 @@
         <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
         <DebugType>none</DebugType>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="runtime.win-arm64.Microsoft.DotNet.ILCompiler" Version="10.0.0-preview.7.25380.108" />
+        <PackageReference Include="runtime.win-x64.Microsoft.DotNet.ILCompiler" Version="10.0.0-preview.7.25380.108" />
+    </ItemGroup>
 </Project>
