Changed workflow group name for parallel runs of both apps

--- a/.github/workflows/Build AppControl Manager for Store.yml
+++ b/.github/workflows/Build AppControl Manager for Store.yml
@@ -5,7 +5,7 @@ on:
 
 # Prevent the workflow from running more than once per change
 concurrency:
-  group: ${{ github.ref }}
+  group: ACMBuildWorkFlow
   cancel-in-progress: true
 
 jobs:
