--- a/.github/workflows/Build Harden System Security for Store.yml
+++ b/.github/workflows/Build Harden System Security for Store.yml
@@ -5,7 +5,7 @@ on:
 
 # Prevent the workflow from running more than once per change
 concurrency:
-  group: ${{ github.ref }}
+  group: HSSBuildWorkFlow
   cancel-in-progress: true
 
 jobs:
