Enforce max package limit in Partner Center uploads
Added logic to enforce a maximum number of application packages (30) in Partner Center submissions. When the limit is reached, the oldest active package is marked as PendingDelete before adding a new one. Updated project metadata to reflect a newer supported OS version and added package tags.

--- a/AppControl Manager/eXclude/PartnerCenter/PartnerCenter.csproj
+++ b/AppControl Manager/eXclude/PartnerCenter/PartnerCenter.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <SupportedOSPlatformVersion>10.0.22000.0</SupportedOSPlatformVersion>
-        <TargetFramework>net10.0-windows10.0.22000.0</TargetFramework>
+        <SupportedOSPlatformVersion>10.0.22621.0</SupportedOSPlatformVersion>
         <Version>$(FileVersion)</Version>
         <FileVersion>1.0.0.0</FileVersion>
         <AssemblyVersion>$(FileVersion)</AssemblyVersion>
@@ -21,6 +20,7 @@
         <Copyright>Violet Hansen</Copyright>
         <Description>Partner Center</Description>
         <DebugType>none</DebugType>
+        <PackageTags>Partner Center, Microsoft</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
